fixed text alignment mobile

--- a/src/styles/master.css
+++ b/src/styles/master.css
@@ -872,6 +872,10 @@ li, p {
     width: 90% !important;
   }
 
+  .projectText {
+    vertical-align: text-top !important;
+  }
+
 }
 
 
